# clang-fatal-build

./: CMakeLists.txt  README.md
Visualization/: CMakeLists.txt
Visualization/src/: stable.h
Visualization/src/Visualization/: Module.cppm  TestWidget.cppm  Widget.cppm  Window.cppm
Visualization/src/Visualization/Helpers/: WidgetGuard.cppm
